# adaptive-load-balancer

./: Cargo.toml  Dockerfile  README.md  compose.yml
src/: errors.rs  lib.rs  main.rs
src/app/: constants.rs  state.rs
src/balancer/: base.rs  basic.rs  error.rs  load_balancer.rs  mod.rs  round_robin.rs  server.rs
src/balancer/algorithm/: base.rs  mod.rs  round_robin.rs
tests/: test_endpoint.rs
