[package]
name = "adaptive-load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.78"
# Hyper is generally faster than axum
# But comes with less features.
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
hyper-util = { version = "0.1", features = ["full"] }
# End hyper
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For secrets
dotenvy = "0.15.7"
lazy_static = "1.4.0"
derive_more =  {version = "1.0.0", features = ["from"]}
# Handling secrets
secrecy = { version = "0.8.0", features = ["serde"] }
# Error handling
thiserror = "1.0.58"
color-eyre = "0.6.3"
# Provides the core functionality for creating and managing spans and events.
# It allows your application to produce trace data that describes the execution flow.
tracing = "0.1.40"
# Configures how the trace data is collected, processed, and exported.
# It allows you to define subscribers that record the trace data to
# various outputs, making it useful for monitoring and debugging.
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-error = "0.2.0"
url = "2.5.2"

[dev-dependencies]
test-case = "*"
# Axum has a lot of features which help with testing our load balancer
axum = "0.7.5"
